feat: adds frontend part and edits alert drones method of drone service
- enables cors
